IP2-548: event post (#24)
